# DataGuardScanner

./: .gitignore  Cargo.toml  README.md  THEME_IMPLEMENTATION.md  THEME_SUMMARY.md  package-lock.json  package.json
.github/workflows/: build.yml
docs/: CODE_OPTIMIZATION_SUMMARY.md  CODE_REFACTORING_SUMMARY.md  CREATE_ICONS.md  FILE_HANDLER_ENUM_OPTIMIZATION.md  FILE_TYPE_CLASSIFICATION_OPTIMIZATION.md  GITHUB_ACTIONS_NAMING_OPTIMIZATION.md  PDF_ERROR_HANDLING.md  PRODUCER_CONSUMER_REFACTORING.md  PROGRESS_FEEDBACK_FIX.md  SCAN_PERFORMANCE_OPTIMIZATION.md  SCAN_STAGNATION_FIX.md  SENSITIVE_DETECTION_OPTIMIZATION.md  SHARED_COUNTER_OPTIMIZATION.md  SINGLE_FILE_TIMEOUT_PROTECTION.md  STATUS_BAR_ENHANCEMENT.md  UI_PERFORMANCE_OPTIMIZATION.md
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  main.ts  style.css  vite-env.d.ts
frontend/src/components/: AboutModal.vue  DirectoryTree.vue  EnvironmentCheck.vue  ExportModal.vue  FileTypeFilter.vue  LogsModal.vue  PreviewModal.vue  ResultsTable.vue  SettingsModal.vue  TreeNode.vue
frontend/src/stores/: app.ts
frontend/src/types/: index.ts
frontend/src/utils/: tauri-api.ts
scripts/: README.md  update-version.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  concurrency.rs  config.rs  environment.rs  file_parser.rs  main.rs  models.rs  scanner.rs  scanner_old.rs  sensitive_detector.rs  system_dirs.rs
src-tauri/src/core/: scanner.rs  scheduler.rs
src-tauri/src/processing/: file_stream_processor.rs
src-tauri/src/utils/: concurrency.rs  config.rs  environment_check.rs
