[package]
name = "dataguard-scanner"
version = "1.0.2"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
regex = "1"
lazy_static = "1"
walkdir = "2"
encoding_rs = "0.8"
trash = "5"
open = "5"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
dirs = "6"
zip = "8"

# PDF 解析
pdf-extract = "0.10"

# Office 文档解析
calamine = "0.34"

# Excel 写入（用于导出报告）
rust_xlsxwriter = "0.94"
